--- a/Ranger/collector/pom.xml
+++ b/Ranger/collector/pom.xml
@@ -9,5 +9,10 @@
 		<version>0.0.1-SNAPSHOT</version>
 	<relativePath>../pom.xml</relativePath>
 	</parent>
-	<dependencies/>		 
+	<dependencies>
+		<dependency>
+			<groupId>com.ranger</groupId>
+			<artifactId>ranger-common</artifactId>
+		</dependency>
+	</dependencies>
 </project>
