--- a/Ranger/pom.xml
+++ b/Ranger/pom.xml
@@ -12,6 +12,7 @@
 		<module>messageposter</module>		
 		<module>analyzer</module>
 		<module>common</module>
+		<module>weibo4j</module>
 	</modules>
 	<dependencyManagement>
 		<dependencies>
@@ -52,6 +53,12 @@
 				<version>0.0.1-SNAPSHOT</version>
 				<type>jar</type>
 			</dependency>
+			<dependency>
+				<groupId>weibo4j</groupId>
+				<artifactId>weibo4j</artifactId>
+				<version>0.0.1-SNAPSHOT</version>
+				<type>jar</type>
+			</dependency>
 						
 			<!-- Third Party Dependencies -->
 			<dependency>
@@ -64,6 +71,56 @@
 				<groupId>org.apache.commons</groupId>
 				<artifactId>commons-lang3</artifactId>
 				<version>3.1</version>
+			</dependency>
+			<dependency>
+				<groupId>commons-codec</groupId>
+				<artifactId>commons-codec</artifactId>
+				<version>1.8</version>
+			</dependency>
+            <dependency>
+				<groupId>commons-httpclient</groupId>
+				<artifactId>commons-httpclient</artifactId>
+				<version>3.1</version>
+			</dependency>
+            <dependency>
+				<groupId>commons-logging</groupId>
+				<artifactId>commons-logging</artifactId>
+				<version>1.1.3</version>
+			</dependency>
+			<dependency>
+				<groupId>org.codehaus.jackson</groupId>
+				<artifactId>jackson-mapper-asl</artifactId>
+				<version>1.9.13</version>
+			</dependency>
+			<dependency>
+				<groupId>org.codehaus.jackson</groupId>
+				<artifactId>jackson-core-asl</artifactId>
+				<version>1.9.13</version>
+			</dependency>
+            <dependency>
+				<groupId>org.codehaus.jackson</groupId>
+				<artifactId>jackson-jaxrs</artifactId>
+				<version>1.9.13</version>
+			</dependency>
+            <dependency>
+				<groupId>org.codehaus.jackson</groupId>
+				<artifactId>jackson-xc</artifactId>
+				<version>1.9.13</version>
+			</dependency>
+            <dependency>
+				<groupId>org.codehaus.jackson</groupId>
+				<artifactId>jackson-mapper-lgpl</artifactId>
+				<version>1.9.13</version>
+			</dependency>
+            <dependency>
+				<groupId>org.codehaus.jackson</groupId>
+				<artifactId>jackson-smile</artifactId>
+				<version>1.9.13</version>
+			</dependency>
+            <dependency>
+				<groupId>org.codehaus.jackson</groupId>
+				<artifactId>jackson-mrbean</artifactId>
+				<version>1.9.13</version>
 			</dependency>
 			<dependency>
 				<!-- Required for testNG testing -->
@@ -124,12 +181,7 @@
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-dao</artifactId>
 				<version>2.0.8</version>
-			</dependency>            
-			<dependency>
-				<groupId>commons-logging</groupId>
-				<artifactId>commons-logging</artifactId>
-				<version>1.1.3</version>
-			</dependency>           
+			</dependency>        
 		</dependencies>
 	</dependencyManagement>
 	<dependencies>
