--- a/Ranger/pom.xml
+++ b/Ranger/pom.xml
@@ -211,6 +211,9 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>3.1</version>
+					<configuration>
+        				<encoding>UTF-8</encoding>
+        			</configuration>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -221,6 +224,9 @@
 					<groupId>org.apache.maven.plugins</groupId>
         			<artifactId>maven-resources-plugin</artifactId>
         			<version>2.6</version>
+        			<configuration>
+        				<encoding>UTF-8</encoding>
+        			</configuration>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
