commit: add code/token generator OAuth4Code.java

--- a/Ranger/weibo4j/src/test/java/config.properties
+++ b/Ranger/weibo4j/src/test/java/config.properties
@@ -1,6 +1,6 @@
 client_ID =1668010415
-client_SERCRET =df7ee472e165c02255623b6979b03053
-redirect_URI =
+client_SERCRET =79de4d423f6672c5d272c2fe3ff4cf8c
+redirect_URI =http://www.weibo.com
 baseURL=https://api.weibo.com/2/
 accessTokenURL=https://api.weibo.com/oauth2/access_token
 authorizeURL=https://api.weibo.com/oauth2/authorize
