--- a/Ranger/pom.xml
+++ b/Ranger/pom.xml
@@ -54,7 +54,7 @@
 				<type>jar</type>
 			</dependency>
 			<dependency>
-				<groupId>weibo4j</groupId>
+				<groupId>com.ranger</groupId>
 				<artifactId>weibo4j</artifactId>
 				<version>0.0.1-SNAPSHOT</version>
 				<type>jar</type>
@@ -68,9 +68,9 @@
 				<version>1.2.17</version>
 			</dependency>
 			<dependency>
-				<groupId>org.apache.commons</groupId>
-				<artifactId>commons-lang3</artifactId>
-				<version>3.1</version>
+				<groupId>commons-lang</groupId>
+				<artifactId>commons-lang</artifactId>
+				<version>2.6</version>
 			</dependency>
 			<dependency>
 				<groupId>commons-codec</groupId>
@@ -87,6 +87,15 @@
 				<artifactId>commons-logging</artifactId>
 				<version>1.1.3</version>
 			</dependency>
+			<!-- this dependency will introduce more dependencies
+			use java.util.Properties to replace
+			-->
+			<dependency>
+				<groupId>commons-configuration</groupId>
+				<artifactId>commons-configuration</artifactId>
+				<version>1.9</version>
+			</dependency>
+			 
 			<dependency>
 				<groupId>org.codehaus.jackson</groupId>
 				<artifactId>jackson-mapper-asl</artifactId>
@@ -200,8 +209,8 @@
 			<artifactId>commons-logging</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-lang3</artifactId>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
 		</dependency>
 	</dependencies>
 	<build>
