--- a/Ranger/collector/pom.xml
+++ b/Ranger/collector/pom.xml
@@ -30,5 +30,9 @@
 			<groupId>com.ranger</groupId>
 			<artifactId>ranger-util</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.ranger</groupId>
+			<artifactId>ranger-dao</artifactId>
+		</dependency>
 	</dependencies>
 </project>
