--- a/Ranger/messageposter/pom.xml
+++ b/Ranger/messageposter/pom.xml
@@ -9,5 +9,6 @@
 		<version>0.0.1-SNAPSHOT</version>
 	<relativePath>../pom.xml</relativePath>
 	</parent>
-	<dependencies/>		 
+	<dependencies>
+	</dependencies>	 
 </project>
