Add getPublicTimeLine test case

--- a/Ranger/resources/initialUserPoo.properties
+++ b/Ranger/resources/initialUserPoo.properties
@@ -1,6 +1,7 @@
  # access token of the weibo API
  accessToken = 2.00d5evFEnhnsoBc45cd025fencuzbE
  # initial uid(s) weibo use's web.
- uid = 3752152991
+ #uid = 3752152991
+ uid = 2552134982
  #screenname = 
  #name = 
