--- a/Ranger/testResources/initialUserPool.properties
+++ b/Ranger/testResources/initialUserPool.properties
@@ -1,6 +1,10 @@
  # access token of the weibo API
- accessToken = 2.00d5evFEnhnsoBc45cd025fencuzbE
- # initial uid(s) weibo use's web.
- uid = 3752152991
- #screenname = 
- #name = 
+ accessToken = 2.00bwB8RBnhnsoB33a16be5bf33viGB
+ # default to 150, max reqeusts allowed by weobi API limitation 
+ totalRequestPerHour = 150
+ # default to 120, for any reason, for e.g poor network, poor pc, if actual request per hour less than actualRequestPerHourLowWarter, 
+ # we see it warning sign of poor performance
+ requestPerHourLowWarter = 120
+ # default to 40 mins, 40*60*1000, if request times reach 150 within 40 mins, that means the bottle neck is weibo API limited request, 
+ # we can improve total through put by using multiple ip, or access token
+ timePerMaxRequestTimesLowWarter = 2400000
