re-factor scheduler

--- a/Ranger/testResources/initialUserPool.properties
+++ b/Ranger/testResources/initialUserPool.properties
@@ -1,10 +1,10 @@
  # access token of the weibo API
  accessToken = 2.00bwB8RBnhnsoB33a16be5bf33viGB
- # default to 150, max reqeusts allowed by weobi API limitation 
- totalRequestPerHour = 150
- # default to 120, for any reason, for e.g poor network, poor pc, if actual request per hour less than actualRequestPerHourLowWarter, 
- # we see it warning sign of poor performance
- requestPerHourLowWarter = 120
- # default to 40 mins, 40*60*1000, if request times reach 150 within 40 mins, that means the bottle neck is weibo API limited request, 
- # we can improve total through put by using multiple ip, or access token
- timePerMaxRequestTimesLowWarter = 2400000
+ # if there is plenty of time from the time point of request limit reset to the time point when request reaches the max request number in last hour
+ # we consider this a performance bottleneck. log a warning message
+ # also if there is much time after the request reaches the max request number and before request limit is reset
+ # we consider that a performance bottleneck too
+ # here we setup the threshold for the time gap between the time point of request limit is reset and time point of  request reaches the max request number
+ # default to 20 minutes
+timeGapThreshold = 1200000
+ 
