--- a/Ranger/resources/initialUserPool.properties
+++ b/Ranger/resources/initialUserPool.properties
@@ -7,4 +7,5 @@
  # here we setup the threshold for the time gap between the time point of request limit is reset and time point of  request reaches the max request number
  # default to 20 minutes
 timeGapThreshold = 1200000
- 
+# to improve the performance, we flush the users into database in batch mode, batchSize define the batch size
+batchSize = 20;
