--- a/Ranger/resources/my.ini
+++ b/Ranger/resources/my.ini
@@ -19,9 +19,11 @@
 # datadir = .....
 # port = .....
 # server_id = .....
+# init_connect='set collation_connection=utf8_unicode_ci'
+character-set-server=gb2312
+character_set_client=gb2312
 
-character-set-server=utf8
-
+#collation_server=utf8_unicode_ci
 
 # Remove leading # to set options mainly useful for reporting servers.
 # The server defaults are faster for transactions and fast SELECTs.
@@ -33,4 +35,4 @@ character-set-server=utf8
 sql_mode=NO_ENGINE_SUBSTITUTION,STRICT_TRANS_TABLES 
 
 [client]
-default-character-set=utf8
+default-character-set=gb2312
