--- a/Ranger/resources/my.ini
+++ b/Ranger/resources/my.ini
@@ -20,8 +20,9 @@
 # port = .....
 # server_id = .....
 # init_connect='set collation_connection=utf8_unicode_ci'
-character-set-server=gb2312
-character_set_client=gb2312
+skip-character-set-client-handshake
+character_set_server=utf8mb4
+# character-set-server=gb2312
 
 #collation_server=utf8_unicode_ci
 
@@ -35,4 +36,5 @@ character_set_client=gb2312
 sql_mode=NO_ENGINE_SUBSTITUTION,STRICT_TRANS_TABLES 
 
 [client]
-default-character-set=gb2312
+# default-character-set=gb2312
+character_set_server=utf8mb4
