--- a/Ranger/resources/my.ini
+++ b/Ranger/resources/my.ini
@@ -22,6 +22,8 @@
 # init_connect='set collation_connection=utf8_unicode_ci'
 skip-character-set-client-handshake
 character_set_server=utf8mb4
+character_set_client=utf8mb4
+collation_server=utf8mb4_unicode_ci
 # character-set-server=gb2312
 
 #collation_server=utf8_unicode_ci
