--- a/Ranger/resources/my.ini
+++ b/Ranger/resources/my.ini
@@ -20,10 +20,11 @@
 # port = .....
 # server_id = .....
 # init_connect='set collation_connection=utf8_unicode_ci'
-skip-character-set-client-handshake
+skip-character-set-client-handshake = FALSE
 character_set_server=utf8mb4
+collation-server = utf8mb4_unicode_ci
 character_set_client=utf8mb4
-collation_server=utf8mb4_unicode_ci
+init_connect='SET NAMES utf8mb4'
 # character-set-server=gb2312
 
 #collation_server=utf8_unicode_ci
