db character set

--- a/Ranger/resources/my.ini
+++ b/Ranger/resources/my.ini
@@ -20,15 +20,18 @@
 # port = .....
 # server_id = .....
 # init_connect='set collation_connection=utf8_unicode_ci'
-skip-character-set-client-handshake = FALSE
-character_set_server=utf8mb4
-collation-server = utf8mb4_unicode_ci
-character_set_client=utf8mb4
-init_connect='SET NAMES utf8mb4'
 # character-set-server=gb2312
+# character_set_client=gb2312
+# init_connect='SET NAMES utf8mb4'
+character-set-client-handshake=false
+character-set-server=utf8mb4
+collation-server=utf8mb4_unicode_ci
 
-#collation_server=utf8_unicode_ci
-
+# [mysql]
+# character_set_client=utf8mb4
+# character_set_connection=utf8mb4
+# character_set_results=utf8mb4
+# character_set_system=utf8mb4
 # Remove leading # to set options mainly useful for reporting servers.
 # The server defaults are faster for transactions and fast SELECTs.
 # Adjust sizes as needed, experiment to find the optimal values.
@@ -40,4 +43,4 @@ sql_mode=NO_ENGINE_SUBSTITUTION,STRICT_TRANS_TABLES
 
 [client]
 # default-character-set=gb2312
-character_set_server=utf8mb4
+default-character-set=utf8mb4
