--- a/Ranger/testResources/configuration.properties
+++ b/Ranger/testResources/configuration.properties
@@ -9,3 +9,6 @@
 timeGapThreshold = 1200000
 # to improve the performance, we flush the users into database in batch mode, batchSize define the batch size
 batchSize = 200
+# to make full use of limited requests and server resource, minimum the parallel threads, kick off the collecting thread one by with predefined intervals
+# in second 600, 10 minutes
+collectorKickOffInterval = 600
