--- a/Ranger/testResources/configuration.properties
+++ b/Ranger/testResources/configuration.properties
@@ -1,4 +1,4 @@
- # access token of the weibo API
+ # access tokens of the weibo API, if multiple tokens, separated by comma ","
  accessToken = 2.00d5evFEnhnsoBc45cd025fencuzbE
  # if there is plenty of time from the time point of request limit reset to the time point when request reaches the max request number in last hour
  # we consider this a performance bottleneck. log a warning message
