common dbcp pool

--- a/Ranger/dao/pom.xml
+++ b/Ranger/dao/pom.xml
@@ -48,6 +48,10 @@
 			<artifactId>ranger-common</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>commons-dbcp</groupId>
+			<artifactId>commons-dbcp</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>com.ranger</groupId>
 			<artifactId>ranger-util</artifactId>
 		</dependency>
