--- a/Ranger/pom.xml
+++ b/Ranger/pom.xml
@@ -95,7 +95,11 @@
 				<artifactId>commons-configuration</artifactId>
 				<version>1.9</version>
 			</dependency>
-			 
+			<dependency>
+				<groupId>commons-dbcp</groupId>
+				<artifactId>commons-dbcp</artifactId>
+				<version>1.4</version>
+			</dependency>           
 			<dependency>
 				<groupId>org.codehaus.jackson</groupId>
 				<artifactId>jackson-mapper-asl</artifactId>
