--- a/Ranger/testResources/log4j.properties
+++ b/Ranger/testResources/log4j.properties
@@ -1,4 +1,4 @@
-  log4j.rootLogger=debug, stdout, R
+  log4j.rootLogger=warn, stdout, R
   log4j.appender.stdout=org.apache.log4j.ConsoleAppender
   log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
   
@@ -11,7 +11,7 @@
 
   log4j.appender.R=org.apache.log4j.RollingFileAppender
   log4j.appender.R.File=weibo.log
-  log4j.appender.R.MaxFileSize= 100KB
+  log4j.appender.R.MaxFileSize= 1000KB
 
   # Keep one backup file
   log4j.appender.R.MaxBackupIndex=1
