--- a/Ranger/testResources/configuration.properties
+++ b/Ranger/testResources/configuration.properties
@@ -1,5 +1,5 @@
  # access tokens of the weibo API, if multiple tokens, separated by comma ","
- accessToken = 2.00d5evFEnhnsoBc45cd025fencuzbE
+ accessToken = 2.00d5evFEnhnsoBc45cd025fencuzbE,d235d46f93ea50da284fc68340551578
  # if there is plenty of time from the time point of request limit reset to the time point when request reaches the max request number in last hour
  # we consider this a performance bottleneck. log a warning message
  # also if there is much time after the request reaches the max request number and before request limit is reset
