--- a/Ranger/pom.xml
+++ b/Ranger/pom.xml
@@ -182,11 +182,6 @@
 			</dependency>
 			<dependency>
 				<groupId>org.springframework</groupId>
-				<artifactId>spring-context</artifactId>
-				<version>3.2.4.RELEASE</version>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework</groupId>
 				<artifactId>spring-expression</artifactId>
 				<version>3.2.4.RELEASE</version>
 			</dependency>
@@ -194,7 +189,12 @@
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-dao</artifactId>
 				<version>2.0.8</version>
-			</dependency>        
+			</dependency>
+			<dependency>
+				<groupId>aopalliance</groupId>
+				<artifactId>aopalliance</artifactId>
+				<version>1.0</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 	<dependencies>
