--- a/Ranger/resources/log4j.properties
+++ b/Ranger/resources/log4j.properties
@@ -1,10 +1,10 @@
-  log4j.rootLogger=debug, stdout, R
+  log4j.rootLogger=warn, stdout, R
   log4j.appender.stdout=org.apache.log4j.ConsoleAppender
   log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
   
-  log4j.logger.org.apache.commons.httpclient=debug
-  log4j.logger.httpclient.wire.content=debug
-  log4j.logger.httpclient.wire.header=debug
+  log4j.logger.org.apache.commons.httpclient=info
+  log4j.logger.httpclient.wire.content=info
+  log4j.logger.httpclient.wire.header=info
 
   # Pattern to output the caller's file name and line number.
   log4j.appender.stdout.layout.ConversionPattern=%-4r %-5p [%d{yyyy-MM-dd HH:mm:ss}]  %m%n
